other examples + gitignore

--- a/Pages/ViewProduct.razor
+++ b/Pages/ViewProduct.razor
@@ -1,4 +1,6 @@
-﻿@page "/product/{id:int}"
+﻿
+rot
+@page "/product/{id:int}"
 @using eShop.Business.Models
 @inject IViewProductUseCase viewProdutUseCase
 <h3>Product Details</h3>
