--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,71 @@
 ﻿@page "/"
+@using eShop.Business.Models
 
 <h1>Hello, world!</h1>
+Below you can find some aata binding examples 
 
-Welcome to your new app.
+@*data-binding 
+1) Product name : @Product.Name  -the value will now flow from the view back to the state. -one way
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+2) <input type="text" @bind-value="product.Name" @bind-value:event="oninput" /> -two way data binding
+//oninput- while we are writing the date it flows back to the state
+*@
+
+Product name : @product.Name 
+ <br/>
+  <br/>
+ <input type="text" @bind-value="product.Name" @bind-value:event="oninput" />
+ <br/>
+  <br/>
+<input  type="checkbox" @bind-value="isActive"/>
+ <br/>
+@isActive <br/>
+  <br/>
+  <p>
+      <label>
+          <input type = "radio" value="1" name="group" @onclick="@(()=> selectedGroup = 1)" /> 1
+      </label>
+
+       <label>
+          <input type = "radio" value="2" name="group" @onclick="@(()=> selectedGroup = 2)"/> 2
+      </label>
+      <br/>
+@selectedGroup
+
+  </p>
+  <p>
+<select @bind="selectedProductId">
+    @foreach(var product in products)
+        {
+            <option value="@product.Id">@product.Name</option>
+        }    
+    </select>
+  </p>
+    <br/>
+    @selectedProductId
+  <br/>
+  <VisibilityComponent @ref="visibilityComponent"></VisibilityComponent>
+   <br/>
+   <button @onclick="Toggle">Toggle Visibility</button>
+@code{
+    private int selectedGroup=0;
+    private int selectedProductId;
+    private bool isActive = false;
+    private VisibilityComponent visibilityComponent;
+    private List<Product> products = new List<Product>
+            {
+                new Product { Id = 495, Brand = "maybelline", Name = "Maybelline Face Studio Master Hi-Light Light Booster Bronzer", Price = 14.99, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/991799d3e70b8856686979f8ff6dcfe0_ra,w158,h184_pa,w158,h184.png", Description = "Maybelline Face Studio Master Hi-Light Light Boosting bronzer formula has an expert  balance of shade + shimmer illuminator for natural glow. Skin goes  soft-lit with zero glitz.    For Best Results: Brush over all shades in palette and gently sweep over  cheekbones, brow bones, and temples, or anywhere light naturally touches  the face.                            "},
+                new Product { Id = 488, Brand = "maybelline", Name = "Maybelline Fit Me Bronzer", Price = 10.29, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/d4f7d82b4858c622bb3c1cef07b9d850_ra,w158,h184_pa,w158,h184.png", Description = "Why You'll Love It  Lightweight pigments blend easily and wear evenly Provides a natural, fade-proof bronzed color that leaves skin the way it was meant to be...fresh, breathing and natural  For Best Results: For soft, natural look, brush along cheekbone, sweeping upward."},
+                new Product { Id = 477, Brand = "maybelline", Name = "Maybelline Facestudio Master Contour Kit", Price = 15.99, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/4f731de249cbd4cb819ea7f5f4cfb5c3_ra,w158,h184_pa,w158,h184.png", Description = "Maybelline Facestudio Master Contour Kit is the ultimate on the go all-in-one palette, with contouring brush included.  Define and highlight in a New York minute with this effortless 3-step face contouring kit.  This easy-to-use 3-step face contouring kit features a bronzer, blush and highlighter."},
+                new Product { Id = 468, Brand = "maybelline", Name = "Maybelline Face Studio Master Hi-Light Light Booster Blush", Price = 14.99, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/4621032a92cb428ad640c105b944b39c_ra,w158,h184_pa,w158,h184.png", Description = "Maybelline Face Studio Master Hi-Light Light Boosting blush formula has an expert  balance of shade + shimmer illuminator for natural glow. Skin goes  soft-lit with zero glitz.    For Best Results: Brush over all shades in palette and gently sweep over  cheekbones, brow bones, and temples, or anywhere light naturally touches  the face.                            "},
+                new Product { Id = 439, Brand = "maybelline", Name = "Maybelline Fit Me Blush", Price = 10.29, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/53d5f825461117c0d96946e1029510b0_ra,w158,h184_pa,w158,h184.png", Description = "Maybelline Fit Me Blush has lightweight pigments blend easily and wear evenly. It provides a natural, fade-proof cheek color that leaves skin the way it was meant to be...fresh, breathing, and natural.  For Best Results: For soft, natural look, brush along cheekbone, sweeping upward."},
+                new Product { Id = 414, Brand = "maybelline", Name = "Maybelline Dream Bouncy Blush", Price = 11.99, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/51eacb9efebbaee39399e65ffe3d9416_ra,w158,h184_pa,w158,h184.png", Description = "Now, blush has bounce! Freshest flush ever:• New bouncy texture is formulated with silicone elastomers• Lightweight like a powder, yet melts seamlessly into skin like a cream giving you a fresh flush• Dermatologist tested• Allergy tested• Non-comedogenic                                                                                                                 For best results: With your fingertips, blend a small amount of  blush onto the apples of your cheeks, applying from your cheekbones to  your temples. To build colour intensity, apply more blush.                      "},
+                new Product { Id = 380, Brand = "maybelline", Name = "Maybelline Fit Me Shine-Free Foundation Stick", Price = 10.99, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/d04e7c2ed65dabe1dca4eed9aa268e95_ra,w158,h184_pa,w158,h184.png", Description = "Get flawless, shine-free skin instantly and on-the-go for tailor-made  mattifying coverage.  The anti-shine core has ultra-lightweight powders  built in to the stick foundation to instantly dissolve excess oil. Features: Maybelline's first gel stick foundation with an anti-shine core Fresh gel foundation blends to a flawless matte finish Lightweight powders in the anti-shine core instantly dissolve excess oil"},
+         };
+    private Product product = new Product { Id = 495, Brand = "maybelline", Name = "Maybelline Face Studio Master Hi-Light Light Booster Bronzer", Price = 14.99, ImageLink = "https://d3t32hsnjxo7q6.cloudfront.net/i/991799d3e70b8856686979f8ff6dcfe0_ra,w158,h184_pa,w158,h184.png", Description = "Maybelline Face Studio Master Hi-Light Light Boosting bronzer formula has an expert  balance of shade + shimmer illuminator for natural glow. Skin goes  soft-lit with zero glitz.    For Best Results: Brush over all shades in palette and gently sweep over  cheekbones, brow bones, and temples, or anywhere light naturally touches  the face" };
+
+    void Toggle()
+    {
+        this.visibilityComponent.SetVisibility();
+    }
+}
