observer pattern example to change state - counter

--- a/_Imports.razor
+++ b/_Imports.razor
@@ -10,3 +10,4 @@
 @using eCommerceApp.Shared
 @using eShop.UseCases.Interfaces
 @using eCommerceApp.Controls
+@using eCommerceApp.Stores.CounterStore
