--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,16 +1,29 @@
 ﻿@page "/counter"
+@inject CounterStore counterStore
+@implements IDisposable
 
 <h1>Counter</h1>
-
-<p>Current count: @currentCount</p>
-
+<p>Current count: @counterStore.GetState().Count</p>
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
-
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        counterStore.AddStateChangeListeners(UpdateView);
+    }
     private void IncrementCount()
     {
-        currentCount++;
+        counterStore.IncrementCount();
+    }
+
+    private void UpdateView()
+    {
+        StateHasChanged();
+    }
+
+    public void Dispose()
+    {
+        counterStore.RemoveStateChangeListeners(UpdateView);
     }
 }
