--- a/App.razor
+++ b/App.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+﻿<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" 
+    AdditionalAssemblies="new[]{ typeof(eShop.Web.CustomerPortal.Pages.ViewProduct).Assembly}">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
