--- a/eShop.Bootstrapper/Shared/NavMenu.razor
+++ b/eShop.Bootstrapper/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@inject CounterStore counterStore
 
 <div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">eCommerceApp</a>
+    <a class="navbar-brand" href="">eShop.Bootstrapper</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
