--- a/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.CustomerPortal/_Imports.razor
@@ -3,7 +3,10 @@
 
 @using eShop.UseCases.SearchProductScreen
 @using eShop.UseCases.ViewProductScreen
+@using eShop.UseCases.ShoppingCartScreen
 @using eShop.Business.Models
 
-@using eShop.Web.Common.Controls 
+@using eShop.Web.Common.Controls
 @using eShop.Web.CustomerPortal.Controls 
+
+@using eShop.UseCases.Interfaces.StateStore
