--- a/eShop.Web.CustomerPortal/Pages/ShoppingCart.razor
+++ b/eShop.Web.CustomerPortal/Pages/ShoppingCart.razor
@@ -3,8 +3,6 @@
 @inject IShoppingCartStateStore shoppingCartStateStore
 @inject IViewShoppingCartUseCase viewShoppingCartUseCase
 
-
-<h3>Shopping Cart</h3>
 <br/>
 @if (order != null && order.LineItems != null && order.LineItems.Count > 0)
 {
@@ -13,7 +11,7 @@
             <ul>
                 @for (int i = 0; i < order.LineItems.Count; i++)
                 {
-                    <LineItemComponent 
+                    <LineItemComponent @key="order.LineItems[i].ProductId"
                                        LineItem="order.LineItems[i]" 
                                        OnDeleteProduct="HandleDeleteProduct"
                                        OnUpdateQuantity="HandleUpdateQuantity"></LineItemComponent>
