--- a/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.CustomerPortal/_Imports.razor
@@ -4,9 +4,12 @@
 @using eShop.UseCases.SearchProductScreen
 @using eShop.UseCases.ViewProductScreen
 @using eShop.UseCases.ShoppingCartScreen
+@using eShop.UseCases.OrderConfirmationScreen
+
 @using eShop.Business.Models
 
 @using eShop.Web.Common.Controls
 @using eShop.Web.CustomerPortal.Controls 
+@using eShop.Web.CustomerPortal 
 
 @using eShop.UseCases.Interfaces.StateStore
